adds sort and search

--- a/views/users.pug
+++ b/views/users.pug
@@ -9,27 +9,27 @@ html(lang="en")
 
         style
             include style.css
-       
+
 
     body
         div
             div(class = "userList" style="display:flex;") 
                 div
-                    a(href="/user/sortasc/id") sort asc
-                    a(href="/user/sortdesc/id") sort desc
+                    a(href="/users/sort/id/asc") sort asc
+                    a(href="/users/sort/id/desc") sort desc
                 div
-                    a(href="/user/sortasc/first") sort asc
-                    a(href="/user/sortdesc/first") sort desc
+                    a(href="/users/sort/first_name/asc") sort asc
+                    a(href="/users/sort/first_name/desc") sort desc
                 div
-                    a(href="/user/sortasc/last") sort asc
-                    a(href="/user/sortdesc/last") sort desc
+                    a(href="/users/sort/last_name/asc") sort asc
+                    a(href="/users/sort/last_name/desc") sort desc
                 div
-                    a(href="/user/sortasc/email") sort asc
-                    a(href="/user/sortdesc/email") sort desc
+                    a(href="/users/sort/email/asc") sort asc
+                    a(href="/users/sort/email/desc") sort desc
                 div
-                    a(href="/user/sortasc/age") sort asc
-                    a(href="/user/sortdesc/age") sort desc
-              
+                    a(href="/users/sort/age/asc") sort asc
+                    a(href="/users/sort/age/desc") sort desc
+
         div
             div(class = "userList" style="display:flex;") 
                 div UserID
